--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "pdfkit": "^0.15.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "stripe": "^16.6.0"
   }
 }
